# Xander

./: .gitignore  Cargo.toml  MEETING-NOTES.md  README.md  TODOs.md  file.txt  interactive.py  pyproject.toml
.github/workflows/: CI.yml
RL/: archer.json  archer_v_orc.json  archer_v_orc_rainbow.json  example_ppo.json  example_rainbow.json  orc.json  rat.json  rat_archer.json  rat_duel_ppo.json  rat_rainbow.json  requirements-kinda.txt  test.ipynb  test.py  test_pdqn.py  utils.py  value
RL/algorithms/: __init__.py  _types.py  pdqn.py
RL/algorithms/ppo/: __init__.py  eval_n_steps.py
RL/algorithms/rainbow/: __init__.py  network.py  prioritised_replay_buffer.py  replay_buffer.py
RL/env/: NOTES.md  agents.py  config.py  duel.py  env.py  space.py  util.py  utils.py  wrappers.py
RL/env2/: agents.py  config.py  duel.py  duel.schema.json  util.py  wrappers.py
RL/experiments/: mountain_car_pdqn.py  pdqn_duel.json  xander_mini_duel_pdqn.py
RL/models/: __init__.py  noisy.py
RL/scripts/: multi_train.py  train.py
RL/util/: types.py
src/: lib.rs
src/agents/: mod.rs  random.rs
src/core/combat/: arena.rs  mod.rs  movement.rs
src/core/dice/: mod.rs
src/py/: damage.rs  dice.rs  legality.rs  stats.rs
src/vis/: arena.rs  color.rs  mod.rs
src/web/: canvas.rs  damage.rs  legality.rs  mod.rs  stats.rs  utils.rs
tests/: rat.json
tests/python/: convert.py  dqn.py  prop.ipynb  test.ipynb  test_ray.py  train_config.json  train_dqn.py
tests/rust/: stats_layout.rs
xander/: __init__.py
xander/engine/: __init__.py  actors.pyi  damage.pyi  dice.pyi
(+33 files in other folders)
