[package]
name = "xander"
version = "0.1.0"
edition = "2021"

[features]
vis = ["dep:skia", "dep:base64"]
py = ["dep:pyo3"]
web = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "dep:serde-wasm-bindgen",
    "getrandom/js",
    "dep:wee_alloc",
]

[lib]
name = "xander"
crate-type = ["lib", "cdylib"]

[dependencies]
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
paste = "1.0.15"
rand = "0.8.5"
pyo3 = { version = "0.23.3", features = [
    "abi3",
    "abi3-py312",
    "extension-module",
], optional = true }
serde = { version = "1.0.217", features = ["derive"] }
chumsky = { version = "0.9.3", features = ["nightly"] }
toml = "0.8.19"
serde_json = "1.0.138"
nalgebra = "0.33.2"
crossbeam-utils = { version = "0.8.21" }
skia = { version = "0.81.0", optional = true, package = "skia-safe" }
base64 = { version = "0.22.1", optional = true }
itertools = { version = "0.14.0" }
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", optional = true, features = [
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
getrandom = { version = "0.2.15", features = ["js"] }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
